# dtc-zc-data-engineering

./: .gitignore  README.md  py-docker-launcher.sh  pyproject.toml  pyrefly.toml
homework/01-docker-terraform/: README.md  main.tf  variables.tf
homework/01-docker-terraform/notebooks/: hw_mod_1.ipynb
homework/02-orchestration/: README.md
module-01-pipeline/: Dockerfile  README.md  docker-compose.yml  draft.ipynb  pipeline.py  test_main.py
module-02-orchestration/: docker-compose.yml
notebooks/: draft.ipynb
src/: main.py
